completed the features section design

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
+
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
@@ -93,9 +94,95 @@
         </section> -->
         <main>
             <section class="section-about">
-                <h2 class="header-secondary">
-                    Exciting tours for visitors
-                </h2>
+                <div class="u-text-center u-m-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exciting tours for visiting people
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary">
+                            Enjoy the wonders of nature
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, ex. Placeat reprehenderit neque facilis hic suscipit 
+                            nobis natus explicabo eligendi obcaecati saepe ipsum mollitia et error accusantium, voluptatum vitae qui.
+                        </p>
+                        <h3 class="heading-tertiary">
+                            The beauty in nature was made by God
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, eos facere. Doloribus nemo 
+                            voluptatibus ab cum laboriosam sint ullam accusamus enim eaque, labore quis quidem, minus dicta consectetur alias nobis.
+                        </p>
+                        <a href="#" class="btn-text">Learn More &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section-features">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-m-bottom-small">Explore the world</h3>
+                            <p class="feture-box__text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, sint reprehenderit? Iste exercitationem illum cupiditate?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-m-bottom-small">Meet nature</h3>
+                            <p class="feture-box__text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, sint reprehenderit? Iste exercitationem illum cupiditate?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-m-bottom-small">Find your way</h3>
+                            <p class="feture-box__text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, sint reprehenderit? Iste exercitationem illum cupiditate?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-m-bottom-small">Live a healthier life</h3>
+                            <p class="feture-box__text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, sint reprehenderit? Iste exercitationem illum cupiditate?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section-tours">
+                    <div class="u-text-center u-m-bottom-big">
+                        <h2 class="heading-secondary">
+                            These are our tours
+                        </h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-1-of-3">
+                            col-1-of-3
+                        </div>
+                        <div class="col-1-of-3">
+                            col-1-of-3
+                        </div>
+                        <div class="col-1-of-3">
+                            col-1-of-3
+                        </div>
+                    </div>
             </section>
         </main>
     </body>
