completed the tours section

--- a/index.html
+++ b/index.html
@@ -174,14 +174,98 @@
                     </div>
                     <div class="row">
                         <div class="col-1-of-3">
-                            col-1-of-3
+                            <div class="card">
+                                <div class="card__side card__side--front"> 
+                                    <div class="card__picture card__picture--p1"></div>
+                                    <h4 class="card__text">
+                                        <span class="card__text-break card__text-break--p1">
+                                                The see explore
+                                        </span> 
+                                    </h4> &nbsp; &nbsp;
+                                    <div class="card__detail">
+                                        <ul>
+                                            <li>ques es que</li>
+                                            <li>parte after parte</li>
+                                            <li>teaches after</li>
+                                            <li>fried rice</li>
+                                            <li>my course mate</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="card__side card__side--back card__side--p1">
+                                    <div class="card__cta">
+                                        <div class="card__price-box">
+                                            <p class="card__price-only">Only</p>
+                                            <p class="card__price-value">$102</p>
+                                        </div>
+                                        <a href="#" class="btn btn--white">Book Now</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-1-of-3">
-                            col-1-of-3
+                            <div class="card">
+                                <div class="card__side card__side--front"> 
+                                    <div class="card__picture card__picture--p2"></div>
+                                    <h4 class="card__text">
+                                        <span class="card__text-break card__text-break--p2">
+                                                The forest hiker
+                                        </span> 
+                                    </h4> &nbsp; &nbsp;
+                                    <div class="card__detail">
+                                        <ul>
+                                            <li>ques es que</li>
+                                            <li>parte after parte</li>
+                                            <li>teaches after</li>
+                                            <li>fried rice</li>
+                                            <li>my course mate</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="card__side card__side--back card__side--p2">
+                                    <div class="card__cta">
+                                        <div class="card__price-box">
+                                            <p class="card__price-only">Only</p>
+                                            <p class="card__price-value">$102</p>
+                                        </div>
+                                        <a href="#" class="btn btn--white">Book Now</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-1-of-3">
-                            col-1-of-3
+                            <div class="card">
+                                <div class="card__side card__side--front"> 
+                                    <div class="card__picture card__picture--p3"></div>
+                                    <h4 class="card__text">
+                                        <span class="card__text-break card__text-break--p3">
+                                                The snow adventurer
+                                        </span> 
+                                    </h4> &nbsp; &nbsp;
+                                    <div class="card__detail">
+                                        <ul>
+                                            <li>ques es que</li>
+                                            <li>parte after parte</li>
+                                            <li>teaches after</li>
+                                            <li>fried rice</li>
+                                            <li>my course mate</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="card__side card__side--back card__side--p3">
+                                    <div class="card__cta">
+                                        <div class="card__price-box">
+                                            <p class="card__price-only">Only</p>
+                                            <p class="card__price-value">$102</p>
+                                        </div>
+                                        <a href="#" class="btn btn--white">Book Now</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+                    </div>
+                    <div class="u-text-center u-m-top-huge">
+                        <a href="#" class="btn btn--green">Discover our tours</a>
                     </div>
             </section>
         </main>
