completed the stories ection of the natours project

--- a/index.html
+++ b/index.html
@@ -268,6 +268,55 @@
                         <a href="#" class="btn btn--green">Discover our tours</a>
                     </div>
             </section>
+            <section class="section-stories">
+                <!-- Download good videos from coverr -->
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay loop muted>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                            Your browser is not supported!
+                    </video>
+                </div>
+                <div class="u-text-center u-m-bottom-big">
+                    <h2 class="heading-secondary">
+                        Nice stories to keep our users happy
+                    </h2>
+                </div>
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="store image" class="story__img">
+                        <figcaption class="story__caption">Mary smith</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary">I had the best week with my family</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia assumenda, 
+                            illum eius id aspernatur ea cupiditate maxime quod a culpa esse modi? Minima, 
+                            asperiores blanditiis? Quasi cupiditate culpa eos officia
+                             esse rem nihil quisquam itaque doloremque, doloribus quidem dolorum nobis 
+                             corrupti nostrum! Nemo voluptas suscipit molestias aperiam illum hic quo.
+                        </p>
+                    </div>
+                </div>
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="store image" class="story__img">
+                        <figcaption class="story__caption">Jack wilson</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary">Wow! my life is completely different</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia assumenda, 
+                            illum eius id aspernatur ea cupiditate maxime quod a culpa esse modi? Minima, 
+                            asperiores blanditiis? Quasi cupiditate culpa eos officia
+                                esse rem nihil quisquam itaque doloremque, doloribus quidem dolorum nobis 
+                                corrupti nostrum! Nemo voluptas suscipit molestias aperiam illum hic quo.
+                        </p>
+                    </div>
+                </div>
+                <div class="u-text-center u-m-top-huge">
+                    <a href="#" class="btn-text">Discover our stories &rarr;</a>
+                </div>
+                
+            </section>
         </main>
     </body>
 
