--- a/index.html
+++ b/index.html
@@ -317,6 +317,27 @@
                 </div>
                 
             </section>
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <form action="#" class="form">
+                            <div class=" u-m-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Keep booking now
+                                    </h2>
+                                </div>
+                            <div class="form__group">
+                                <input type="text" name="name" id="name" class="form__field" placeholder="FullName" required>
+                                <label for="name" class="form__label">Full Name</label>
+                            </div>
+                            <div class="form__group">
+                                <input type="email" name="email" id="email" class="form__field" placeholder="Email" required>
+                                <label for="email" class="form__label">Email</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 
