--- a/index.html
+++ b/index.html
@@ -334,6 +334,25 @@
                                 <input type="email" name="email" id="email" class="form__field" placeholder="Email" required>
                                 <label for="email" class="form__label">Email</label>
                             </div>
+                            <div class="form__group u-m-bottom-medium">
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="small" name="size">
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Small tour group
+                                    </label>
+                                </div>
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="large" name="size">
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        large tour group
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form__group">
+                                <button class="btn btn--green">Book Now</button>
+                            </div>
                         </form>
                     </div>
                 </div>
