--- a/index.html
+++ b/index.html
@@ -358,6 +358,29 @@
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="Full Logo" class="footer__logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Career</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <div class="footer__copywright">
+                        Built by Ifediorah Chinedu &copy; copywright KUBOYD
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 
 </html>
