completed the popup section

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                     <div class="u-text-center u-m-bottom-big">
                         <h2 class="heading-secondary">
                             These are our tours
@@ -236,7 +236,7 @@
                                             <p class="card__price-only">Only</p>
                                             <p class="card__price-value">$102</p>
                                         </div>
-                                        <a href="#" class="btn btn--white">Book Now</a>
+                                        <a href="/#popup" class="btn btn--white">Book Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -266,7 +266,7 @@
                                             <p class="card__price-only">Only</p>
                                             <p class="card__price-value">$102</p>
                                         </div>
-                                        <a href="#" class="btn btn--white">Book Now</a>
+                                        <a href="/#popup" class="btn btn--white">Book Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -296,7 +296,7 @@
                                             <p class="card__price-only">Only</p>
                                             <p class="card__price-value">$102</p>
                                         </div>
-                                        <a href="#" class="btn btn--white">Book Now</a>
+                                        <a href="/#popup" class="btn btn--white">Book Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -419,8 +419,25 @@
                 </div>
             </div>
         </footer>
-        <div class="popup">
-            <div class="popup__content"></div>
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="./img/nat-8.jpg" alt="Tour image" class="popup__img">
+                    <img src="./img/nat-9.jpg" alt="Tour image" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="/#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary">Start Booking</h2>
+                    <h3 class="heading-tertiary u-m-bottom-small">Important &ndash; Please read the term before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis qui aperiam illum porro quidem
+                         veniam, eius nulla est. A officiis non placeat eius. Praesentium sint, sapiente nam architecto dolore harum
+                          eius maxime! Delectus eveniet nobis repudiandae provident tempore voluptatum eligendi nulla
+                         assumenda in ipsam? Dolorem blanditiis quisquam ab amet eum!
+                    </p>
+                    <button class="btn btn--green">Book Now!</button>
+                </div>
+            </div>
         </div>
     </body>
 
